# TrialDesignBench

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci-tests.yml  docs.yml  mypy.yml  ruff-check.yml
docs/: changelog.md  index.md
docs/articles/: configuration.md  usage.md
docs/reference/: cases.md  codex.md  config.md  index.md  mathpix.md  models.md  pipeline.md  prompt.md
docs/scripts/: sync.sh
docs/stylesheets/: extra.css
scripts/: SYNC_README.md  sync_dataset.py
src/trialdesignbench/: __init__.py  cases.py  claude.py  cli.py  codex.py  config.py  gemini.py  mathpix.py  models.py  pipeline.py  prompt.py  status.py
tdb-workspace/converted/: NCT02578680_SAP_p86_100.mathpix.json
tests/: conftest.py  test_cases.py  test_claude.py  test_codex.py  test_config_cli.py  test_gemini.py  test_mathpix.py  test_pipeline.py
tests/fixtures/: NCT02578680_SAP_p86_100.mmd
