[project]
name = "trialdesignbench"
version = "0.1.0"
description = "Evaluate whether AI agents can create efficient, reproducible, and safe clinical trial design"
authors = [{ name = "Nan Xiao", email = "me@nanx.me" }]
dependencies = ["pydantic>=2.13.4", "tqdm>=4.67.3"]
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Typing :: Typed",
]

requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/docs", "/AGENTS.md", "/zensical.toml", "/uv.lock"]

[tool.hatch.build.targets.wheel]
exclude = ["/docs", "/AGENTS.md", "/zensical.toml", "/uv.lock"]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mkdocstrings-python>=2.0.3",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "zensical>=0.0.42",
]
